Fixed pagination button styling, feature table wrapping & last_page calculation
Former-commit-id: 7a8f862c7a7f8c827696f42aca65334c8a4a5b60

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -368,6 +368,7 @@ table.layout th, table.layout td {
 table.lined {
     border-collapse:collapse;
     margin-bottom: 10px;
+    word-break: break-word;
 }
 
 table.lined td {
@@ -394,9 +395,10 @@ table.lined td {
     cursor: pointer;
     border-radius: 0;
     border: 1px solid var(--primary-blue);
-    width: 30px;
-    height: 30px;
+    /* width: 30px; */
+    /* height: 30px; */
     font-size: 14px;
+    padding: 6px 10px;
 
     transition: background-color 0.2s ease, color 0.2s ease;
 }
